--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -74,9 +74,19 @@
        {% block container %}
        <div class="container-fluid">
           <div class="jumbotron">
-             <h1>Hola {{ name }}!</h1>
-             <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+             <h1>Atletismo</h1>
+             <p class="lead">Sistema de gestión de un club de atletismo</p>
           </div>
+          <p>O obxectivo principal do proxecto é dispor dunha alternativa baseada en Software Libre para a xestión das labores administrativas dun club de atletismo.</p>
+          <p>Os obxectivos a acadar co proxecto son os seguintes:</p>
+          <ul>
+             <li>Xestionar os asociados: altas, mantemento e baixas dos membros do club.</li>
+             <li>Controlar as cotas dos socios do club.</li>
+             <li>Controlar as inscricións dos atletas nas probas recomendadas polo club.</li>
+             <li>Rexistrar as marcas dos atletas para cada unha das probas nas que participe</li>
+             <li>Xestión de contabilidade das cotas dos asociados simplificada (ingresos/gastos).</li>
+             <li>A aplicación debe ser completamente xestionable a través dunha interface web.</li>
+          </ul>
        </div>
 
        {% endblock %}
