--- a/src/Easanles/AtletismoBundle/Resources/views/Prueba/form_copy_prueba.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Prueba/form_copy_prueba.html.twig
@@ -13,7 +13,7 @@
 {{ form_start(form, {'action': path('editar_prueba', {'sidCom': sidCom, 'sidPru': sidPru})}) }}
 {% endif %}
 
-<div>
+    <div>
        <div class="form_row col-xs-10">
           {{ form_row(form.tpr) }}
        </div>
@@ -23,7 +23,7 @@
     </div>
     <div>
        <div class="form_row col-xs-6">
-          {{ form_row(form.idcat) }}
+          {{ form_row(form.idCat) }}
        </div>
        <div class="form_row col-xs-6">
           {{ form_row(form.nombre) }}
