--- a/src/Easanles/AtletismoBundle/Resources/views/Prueba/form_new_prueba.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Prueba/form_new_prueba.html.twig
@@ -24,7 +24,7 @@
     </div>
     <div>
        <div class="form_row col-xs-6">
-          {{ form_row(form.idcat) }}
+          {{ form_row(form.idCat) }}
        </div>
        <div class="form_row col-xs-6">
           {{ form_row(form.nombre) }}
