--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -23,7 +23,7 @@
     
    <div class="row">
       <div class="col-xs-12 col-sm-4">
-         <img src="/www/web/bundles/atletismo/images/ejemplo.jpg" alt="{{ com.nombre }}" class="img-responsive thumbnail">
+         <img src="{{ vich_uploader_asset(com, 'cartelFile') }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/>
       </div>
       <div class="col-xs-12 col-sm-8">
          <table class="table table-responsive">
@@ -53,15 +53,6 @@
          <a type="button" class="btn btn-m btn-default" href="../../pruebas/{{ com.sid }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas <span class="badge">{{ com.pruebas.toArray()|length }}</span></a>
       </div>
    </div>
-         
-         
-         
-         =======================
-         <dl class="dl-horizontal"><dt>Cartel</dt><dd>{{ com.cartel }}</dd></dl>
-         <dl class="dl-horizontal"><dt>Es federado</dt><dd>{{ com.esfeder }}</dd></dl>
-         <dl class="dl-horizontal"><dt>Es oficial</dt><dd>{{ com.esoficial }}</dd></dl>
-
-   
    
 {% endblock %}
 
