--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,7 @@
     <body onLoad="{% block onload %}{% endblock %}">
         {% block body %}{% endblock %}
         
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="{{ asset('bundles/jquery/jquery-1.11.3.min.js') }}"></script>
         <script src="{{ asset('bundles/bootstrap-3.3.2-dist/js/bootstrap.min.js') }}"></script>
         {% block js %}{% endblock %}
     </body>
