--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -18,14 +18,17 @@
   <li class="active">{{ com.nombre }} ({{ com.temp }} / {{ com.temp +1 }})</li>
 {% endblock %}
 
+   {% block modallabel %}Confirmar borrado{% endblock %}
+   {% block modalbody %}
+   <p>¿Confirmar borrado de la competición <strong id="data1">***</strong> de la temporada <strong id="data2">***</strong>?</p>
+   {% endblock %}
+   {% block modalprimary %}<a id="confirmbutton" type="button" class="btn btn-danger" href=""><span class="glyphicon glyphicon-remove"></span> Borrar</a>{% endblock %}
+
 {% block container %}
    <h1 id="container_title" class="row page-header">{{ com.nombre }} ({{ com.temp }} / {{ com.temp + 1}})</h1>
     
    <div class="row">
-      <div class="col-xs-12 col-sm-4">
-         <img src="{{ vich_uploader_asset(com, 'cartelFile') }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/>
-      </div>
-      <div class="col-xs-12 col-sm-8">
+      <div class="col-xs-12 col-sm-8 col-sm-push-4">
          <table class="table table-responsive">
             <tbody>
                <tr><td><strong>Tipo:</strong></td><td>AIRE LIBRE</td></tr>
@@ -49,14 +52,20 @@
          {% elseif com.esoficial is same as(true) %}
          <p class="text-center"><strong>COMPETICIÓN OFICIAL DEL CLUB</strong></p>
          {% endif %}
-         <a type="button" class="btn btn-m btn-default" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
-         <a type="button" class="btn btn-m btn-default" href="../../pruebas/{{ com.sid }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas <span class="badge">{{ com.pruebas.toArray()|length }}</span></a>
+         <a type="button" class="btn btn-m btn-default hidden-xs" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
+         <a type="button" class="btn btn-m btn-default" href="../editar/{{ com.sid }}/"><span class="glyphicon glyphicon-edit"></span> Editar</a>
+         <a type="button" class="btn btn-m btn-{% if com.pruebas.toArray()|length == 0 %}warning{% else %}default{% endif %}" href="../../pruebas/{{ com.sid }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas <span class="badge">{{ com.pruebas.toArray()|length }}</span></a>
+         <button type="button" class="btn btn-m btn-danger pull-right" onClick="showModal('delCOM', '{{ com.nombre }}', '{{ com.temp }}', '../borrar?i={{ com.sid }}')"><span class="glyphicon glyphicon-remove"></span> Borrar</button>
+      </div>
+      <div class="col-xs-12 col-sm-4 col-sm-pull-8">
+         <a href="{{ vich_uploader_asset(com, 'cartelFile') }}"><img src="{{ vich_uploader_asset(com, 'cartelFile') }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
       </div>
    </div>
    
 {% endblock %}
 
 {% block js %}
+   <script src="{{ asset('bundles/atletismo/js/modals.js') }}"></script>
 
 {% endblock %}
 
