--- a/src/Easanles/AtletismoBundle/Resources/views/TipoPrueba/list_tipopruebaformato.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/TipoPrueba/list_tipopruebaformato.html.twig
@@ -1,10 +1,10 @@
                <tbody>
                   <tr>
                      <th>Nombre</th>
-                     <th>Modalidades</th>
+                     <th><abbr title="Modalidades" class="visible-xs-block">Mod.</abbr><div class="hidden-xs">Modalidades</div></th>
                      <th>Unidades</th>
-                     <th>Intentos por prueba</th>
-                     <th>Acciones</th>
+                     <th><abbr title="Intentos por prueba" class="visible-xs-block"># Int.</abbr><div class="hidden-xs">Intentos por prueba</div></th>
+                     <th><abbr title="Acciones" class="visible-xs-block">Acc.</abbr><div class="hidden-xs">Acciones</div></th>
                   </tr>
                   {% for row in tiposprueba %}
                   <tr>
@@ -13,8 +13,17 @@
                      </td>
                      <td>{{ row.unidades }}</td><td>{{ row.numint }}</td>
                      <td>
-                        <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><span class="glyphicon glyphicon-edit"></span></button>
-                        <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal('delTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><span class="glyphicon glyphicon-remove"></span></button>
+                        <div class="btn-group visible-xs-block">
+                           <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                           <ul class="dropdown-menu pull-right">
+                              <li><a href="#" onClick="showModal('ediTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><span class="glyphicon glyphicon-edit"></span> Editar</a></li>
+                              <li><a class="bg-danger" href="#" onClick="showModal('delTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><div class="text-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</div></a></li>
+                           </ul>
+                        </div>
+                        <div class="hidden-xs">
+                           <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><span class="glyphicon glyphicon-edit"></span></button>
+                           <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal('delTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><span class="glyphicon glyphicon-remove"></span></button>
+                        </div>
                      </td>
                   </tr>
                   <tr id="tprm-table-{{ row.sid }}" style="display:none;"><td colspan="5">
